<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".TermEdit"
    tools:layout_editor_absoluteY="56dp"
    tools:showIn="@layout/activity_term_edit">

    <Spinner
        android:id="@+id/spinnerCourse"
        android:layout_width="368dp"
        android:layout_height="28dp"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/recyclerCourses" />

    <android.support.v7.widget.RecyclerView
        android:id="@+id/recyclerCourses"
        android:layout_width="365dp"
        android:layout_height="146dp"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="366dp"
        android:layout_height="292dp"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <EditText
            android:id="@+id/lblTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textPersonName"
            android:text="Title"
            tools:layout_editor_absoluteX="8dp"
            tools:layout_editor_absoluteY="16dp" />

        <EditText
            android:id="@+id/editTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textPersonName"
            tools:layout_editor_absoluteX="16dp"
            tools:layout_editor_absoluteY="61dp" />

        <EditText
            android:id="@+id/lblStartDate"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textPersonName"
            android:text="Start Date"
            tools:layout_editor_absoluteX="8dp"
            tools:layout_editor_absoluteY="114dp" />

        <EditText
            android:id="@+id/editStartDate"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="date"
            tools:layout_editor_absoluteX="16dp"
            tools:layout_editor_absoluteY="251dp" />

        <EditText
            android:id="@+id/lblEndDate"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:editable="false"
            android:ems="10"
            android:inputType="textPersonName"
            android:text="End Date"
            tools:layout_editor_absoluteX="8dp"
            tools:layout_editor_absoluteY="205dp" />

        <EditText
            android:id="@+id/editEndDate"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="date"
            tools:layout_editor_absoluteX="16dp"
            tools:layout_editor_absoluteY="160dp" />

    </LinearLayout>

    <TableLayout
        android:layout_width="366dp"
        android:layout_height="108dp"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginBottom="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/spinnerCourse">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="94dp">

            <Button
                android:id="@+id/btnAddClass"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="onAddCourseButtonClick"
                android:text="@string/button_add_class"
                tools:layout_editor_absoluteX="16dp"
                tools:layout_editor_absoluteY="563dp" />

            <Button
                android:id="@+id/btnRemoveClass"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="onRemoveCourseButtonClick"
                android:text="@string/button_remove_class"
                tools:layout_editor_absoluteX="114dp"
                tools:layout_editor_absoluteY="563dp" />

            <Button
                android:id="@+id/btnNewClass"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="onNewCourseButtonClick"
                android:text="@string/button_new_class"
                tools:layout_editor_absoluteX="256dp"
                tools:layout_editor_absoluteY="563dp" />

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Button
                android:id="@+id/btnSave"
                android:layout_width="wrap_content"
                android:layout_height="48dp"
                android:onClick="onSaveButtonClick"
                android:text="@string/button_save"
                tools:layout_editor_absoluteX="16dp"
                tools:layout_editor_absoluteY="611dp" />

            <Button
                android:id="@+id/btnCancel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="onCancelButtonClick"
                android:text="@android:string/cancel"
                tools:layout_editor_absoluteX="114dp"
                tools:layout_editor_absoluteY="611dp" />

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent" />

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent" />
    </TableLayout>

</android.support.constraint.ConstraintLayout>